2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/Timer.java: documenting and some
          formatting.

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/JTextArea.java (replaceRange):
        Fixing doc.remove(start, length) misinterpretation.

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-26  Roman Kennke  <roman@ontographics.com>

        * javax/swing/plaf/basic/BasicListUI
        (updateLayoutState,paint): make BasicListUI aware of the
        width of the rendered JList

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-25  Sven de Marothy  <sven@physto.se>

        * java/net/InetAddress.java
        (toString): Don't print empty hostnames.
        Fixes bug #11956

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/Timer.java (constructor): assigning initialDelay

2005-03-02  Dalibor Topic  <robilad@kaffe.org>

	Resynced with GNU Classpath.

	2005-02-24  Audrius Meskauskas  <audriusa@bluewin.ch>

        * javax/swing/Timer.java (Waker.run): firing the first action
        event.

2005-02-24  Dalibor Topic  <robilad@kaffe.org>

	* configure.ac (LIBDEBUG): Removed now useless classpath debug option.

	* libraries/javalib/gnu/classpath/Configuration.java.in
	(HAVE_NATIVE_GET_PROXY_CLASS, HAVE_NATIVE_GET_PROXY_DATA,
	HAVE_NATIVE_GENERATE_PROXY_CLASS): Removed.

	* libraries/javalib/java/lang/reflect/Proxy.java: Use VMProxy for 
	settings.

	* libraries/javalib/java/lang/reflect/VMProxy.java: new file.
	
2005-02-24  Dalibor Topic  <robilad@kaffe.org>

	* libraries/javalib/java/lang/StrictMath.java (DEBUG): 
	new constant.