@@ -2,6 +2,16 @@
 
 	Resynced with GNU Classpath.
 
+	2005-02-27  Roman Kennke  <roman@ontographics.com>
+
+        * javax/swing/plaf/basic/BasicListUI:
+        make BasicListUI capable of wrapping lists
+        (layoutOrientation property of javax.swing.JList)
+
+2005-03-02  Dalibor Topic  <robilad@kaffe.org>
+
+	Resynced with GNU Classpath.
+
 	2005-02-26  Audrius Meskauskas  <audriusa@bluewin.ch>
 
         * javax/swing/Timer.java: documenting and some
